--- a/css/style.css
+++ b/css/style.css
@@ -177,3 +177,11 @@ th {
     font-size: 0.8rem;
     color: #888;
 }
+
+/* Chart Container */
+#chart-container {
+    position: relative;
+    height: 400px;
+    width: 100%;
+    margin-top: 2rem;
+}
